feat: tfc and arborfirmacraft support